--- a/Again/Again.WasmClient/Pages/ProfilePage.razor
+++ b/Again/Again.WasmClient/Pages/ProfilePage.razor
@@ -172,7 +172,7 @@
     private string bio = "Kısa bir biyografi";
 
     // Kullanıcı profil resmi
-    private string profilePictureUrl = "/profile.png";
+    private string profilePictureUrl;
 
     private void ToggleEditMode()
     {
