--- a/Again/Again.WasmClient/Pages/ProfilePage.razor
+++ b/Again/Again.WasmClient/Pages/ProfilePage.razor
@@ -187,6 +187,6 @@
     private string GetProfilePictureUrl()
     {
         // Kullanıcı fotoğrafı varsa onu, yoksa varsayılan fotoğrafı döndür
-        return string.IsNullOrEmpty(profilePictureUrl) ? "/profile.png" : profilePictureUrl;
+        return string.IsNullOrEmpty(profilePictureUrl) ? "/againLogos.png" : profilePictureUrl;
     }
 }
